Json Config enabled